wokring angular project with backend api

--- a/KingPim.Web/appsettings.json
+++ b/KingPim.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "KingPim": "Data Source=.\\;Database=KingPim;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+
 }
