--- a/KingPim.Web/ClientApp/package.json
+++ b/KingPim.Web/ClientApp/package.json
@@ -23,10 +23,13 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^5.4.1",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "angular-font-awesome": "^3.1.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "^5.5.6",
