--- a/KingPim.Application/KingPim.Application.csproj
+++ b/KingPim.Application/KingPim.Application.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.0.100" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KingPim.Persistence\KingPim.Persistence.csproj" />
   </ItemGroup>
 
