identity with jwt working now onto frontend

--- a/KingPim.Web/appsettings.json
+++ b/KingPim.Web/appsettings.json
@@ -6,6 +6,11 @@
   },
   "ConnectionStrings": {
     "KingPim": "Data Source=.\\;Database=KingPim;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtIssuerOptions": {
+    "Issuer": "webApi",
+    "Audience": "http://localhost:44306/"
   }
+
 
 }
