--- a/KingPim.Web/appsettings.json
+++ b/KingPim.Web/appsettings.json
@@ -9,7 +9,7 @@
   },
   "JwtIssuerOptions": {
     "Issuer": "webApi",
-    "Audience": "http://localhost:44306/"
+    "Audience": "http://localhost:53632"
   }
 
 
