--- a/KingPim.Web/appsettings.json
+++ b/KingPim.Web/appsettings.json
@@ -5,12 +5,10 @@
     }
   },
   "ConnectionStrings": {
-    "KingPim": "Data Source=.\\;Database=KingPim;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "KingPim": "Data Source=.\\;Database=KingPimV2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "JwtIssuerOptions": {
-    "Issuer": "webApi",
-    "Audience": "http://localhost:53632"
+  "AppSettings": {
+    "Secret": "SuperDuperSecretKey"
   }
-
 
 }
