--- a/KingPim.Web/ClientApp/package.json
+++ b/KingPim.Web/ClientApp/package.json
@@ -55,7 +55,7 @@
     "protractor": "^5.4.1",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "3.1.4"
+    "typescript": "^3.1.5"
   },
   "optionalDependencies": {
     "node-sass": "^4.9.0"
