--- a/KingPim.Domain/KingPim.Domain.csproj
+++ b/KingPim.Domain/KingPim.Domain.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Entities\AssetMedia.cs" />
+    <Compile Remove="Entities\AssetType.cs" />
+    <Compile Remove="Entities\ProductSystemValue.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2" />
