--- a/KingPim.Application/KingPim.Application.csproj
+++ b/KingPim.Application/KingPim.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -15,5 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="..\KingPim.Persistence\KingPim.Persistence.csproj" />
   </ItemGroup>
-
+  
 </Project>
+
