--- a/KingPim.Web/ClientApp/package.json
+++ b/KingPim.Web/ClientApp/package.json
@@ -14,11 +14,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "7.0.1",
+    "@angular/cdk": "~7.0.3",
     "@angular/common": "7.0.1",
     "@angular/compiler": "7.0.1",
     "@angular/core": "7.0.1",
     "@angular/forms": "7.0.1",
     "@angular/http": "7.0.1",
+    "@angular/material": "^7.0.3",
     "@angular/platform-browser": "7.0.1",
     "@angular/platform-browser-dynamic": "7.0.1",
     "@angular/platform-server": "7.0.1",
@@ -31,6 +33,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.3",
