--- a/KingPim.Web/ClientApp/package.json
+++ b/KingPim.Web/ClientApp/package.json
@@ -27,11 +27,13 @@
     "@angular/router": "7.0.1",
     "@fortawesome/fontawesome-free": "^5.4.2",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0",
+    "@types/file-saver": "^2.0.0",
     "angular": "^1.7.5",
     "angular-font-awesome": "^3.1.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
+    "file-saver": "^2.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
